--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
     <!-- Desktop Banner -->
     <div class="banner-container desktop-banner">
-        <img src="websitebanner.jpg" alt="YuvaaByCharul Coming Soon - Desktop" class="banner-image">
+        <img src="websitebanner1.jpg" alt="YuvaaByCharul Coming Soon - Desktop" class="banner-image">
     </div>
 
     <!-- Simple Email Form -->
