--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
     <!-- Simple Email Form -->
     <div class="form-container">
-        <h3>Subscribe for Updates</h3>
+        <h3>Be The First To Know & Glow!</h3>
         <form class="email-form" id="emailForm">
             <div class="form-group">
                 <input type="email" class="email-input" id="emailInput" placeholder="Enter your email address" required>
