--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         body {
             font-family: Arial, sans-serif;
-            background-color: #f5f5f5;
+            background-color: #faeed6;
         }
 
         .banner-container {
@@ -28,7 +28,7 @@
         }
 
         .form-container {
-            background: white;
+            background: #faeed6;
             padding: 30px 20px;
             text-align: center;
             box-shadow: 0 2px 10px rgba(0,0,0,0.1);
@@ -142,12 +142,12 @@
 
     <!-- Desktop Banner -->
     <div class="banner-container desktop-banner">
-        <img src="websitebanner1.jpg" alt="YuvaaByCharul Coming Soon - Desktop" class="banner-image">
+        <img src="websitebanner.jpg" alt="YuvaaByCharul Coming Soon - Desktop" class="banner-image">
     </div>
 
     <!-- Simple Email Form -->
     <div class="form-container">
-        <h3>Be The First To Know & Glow!</h3>
+        <h3>Subscribe for Updates</h3>
         <form class="email-form" id="emailForm">
             <div class="form-group">
                 <input type="email" class="email-input" id="emailInput" placeholder="Enter your email address" required>
